# freertos_wrapper

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json  export_host_ip.sh
example_app/: Cargo.toml  build.rs  memory.x
example_app/.cargo/: config.toml
example_app/src/: main.rs
freertos/: Cargo.toml
freertos/src/: ffi.rs  lib.rs
freertos/src/ports/: cm4.rs  mod.rs
freertos_build/: Cargo.toml
freertos_build/src/: FreeRTOSConfig.h.hbs  config.rs  lib.rs  ports.rs
