[package]
name = "example_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freertos = {path = "../freertos"}
cortex-m-rt = "0.7"

[build-dependencies]
freertos_build = {path = "../freertos_build"}